# MA-Craftax

./: README.md  pyproject.toml  requirements.txt
baselines/: ippo_rnn.py  mappo_rnn.py  pqn_vdn_rnn.py
baselines/config/: mappo_rnn.yaml  pqn_vdn_rnn.yaml
craftax/: craftax_env.py
craftax/craftax_coop/: constants.py  game_logic.py
craftax/craftax_coop/assets/: texture_cache.pbz2
craftax/craftax_coop/envs/: common.py  craftax_pixels_env.py  craftax_symbolic_env.py
craftax/craftax_coop/renderer/: renderer_pixels.py  renderer_symbolic.py
craftax/craftax_coop/util/: game_logic_utils.py
craftax/craftax_coop/world_gen/: world_gen.py  world_gen_configs.py
craftax/craftax_ma/: constants.py  craftax_state.py  game_logic.py
craftax/craftax_ma/envs/: common.py  craftax_pixels_env.py  craftax_symbolic_env.py
craftax/craftax_ma/renderer/: renderer_pixels.py  renderer_symbolic.py
craftax/craftax_ma/util/: game_logic_utils.py
craftax/craftax_ma/world_gen/: world_gen.py  world_gen_configs.py
