[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ma-craftax"
description = "An open-world environment for training MARL agents"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "jax[cuda12]",
    "distrax",
    "optax",
    "flax",
    "numpy",
    "black",
    "pre-commit",
    "argparse",
    "wandb",
    "orbax-checkpoint",
    "pygame",
    "gymnax",
    "chex",
    "matplotlib",
    "imageio",
    "jaxmarl",
    "seaborn",
]

[tool.setuptools.packages.find]
include=["craftax*"]